Skip over layers with degenerate transforms. (bug 1381352, r=mattwoodrow)