gfx/layers/mlgpu/RenderPassMLGPU.cpp
@@ -469,7 +469,12 @@ TexturedRenderPass::AddItem(Txn& aTxn,
 
   const Matrix4x4& fullTransform = aInfo.layer->GetLayer()->GetEffectiveTransformForBuffer();
   Matrix transform = fullTransform.As2D();
-  Matrix inverse = transform.Inverse();
+  Matrix inverse = transform;
+  if (!inverse.Invert()) {
+    // Degenerate transforms are not visible, since there is no mapping to
+    // screen space. Just return without adding any draws.
+    return true;
+  }
   MOZ_ASSERT(inverse.IsRectilinear());
 
   // Transform the clip rect.
